# Maya-1

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: python-tests.yml
elixir_supervisor/: mix.exs
go_scheduler/: main.go
julia_prototypes/: optimizer_bench.jl
mojo_kernels/: attention_kernel.mojo  fused_swiglu.py  rms_norm.cpp  rms_norm.cu  rms_norm_extension.py
python_training/: config.lua  dataset.py  db_logger.py  download_clean_data.py  filter_quality.py  generate.py  inference_server.py  lua_config_parser.py  model.py  muon.py  orpo_train.py  sft.py  sft_1b.py  train.py
rust_dataloader/: Cargo.toml
rust_dataloader/src/: lib.rs
scripts/: add_chat_tokens.py  auto_train.py  curate_alpaca_quality.py  curate_lima_style.py  deduplicate_dataset.py  generate_chat_data.py  generate_large_corpus.py  maya_colab_training.ipynb  prepare_mega_data.py  prepare_mock_data.py  prepare_real_data.py  profile_training.py  provision_cluster.sh  repo_to_text.py  run_all_tests.ps1  run_all_tests.sh  run_cluster_training.sh  torchrun_patch.py  train_turkish_tokenizer.py  zip_workspace.py
shared/: mock_tokenizer.json  rl_environment.lua  sft_data.json  turkish_bpe_50k.json
shared/prof_logs/: DESKTOP-SQC07TS_20196.1784117100863673100.pt.trace.json
ts_dashboard/: Dockerfile  package-lock.json  package.json  server.ts
ts_dashboard/public/: index.html
wiki_pages/: Alignment-and-Inference.md  Dataset-Pipeline.md  Home.md  Model-Architecture.md  Pretraining-Guide.md
zig_utils/: binary_checker.zig  build.zig
