[package]
name = "rust_dataloader"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_dataloader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rayon = "1.10"
memmap2 = "0.9"
tokenizers = "0.20"
bytemuck = "1.18"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
